--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@400;700&display=swap');
+
+* {
+    font-family: 'Noto Sans Mono', monospace;
+}
+
 .hidden {
     display: none;
 }
